# linkedin-comments-recommender

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.claude/: CLAUDE.md  ralph.json  security.md
.claude/agents/: code-reviewer.md
.claude/overrides/: profile.env
.claude/scripts/: ralph-afk.sh
.claude/skills/prd-to-issues/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/write-a-prd/: SKILL.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/graph/: nodes.py  pipeline.py  state.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: data_fetcher.py  linkedin_discovery.py  linkedin_suggestions.py  llm.py  post_ranking.py
backend/tests/: test_api.py  test_e2e.py  test_graph.py  test_linkedin_discovery.py  test_linkedin_suggestions.py  test_services.py  test_suggestion_schema.py
docs/: architecture.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/app/: branding.test.tsx  globals.css  layout.tsx  page.tsx  theme-tokens.test.ts
frontend/src/components/: generation-form.test.tsx  generation-form.tsx  result-display.test.tsx  result-display.tsx  stream-display.test.tsx  stream-display.tsx
frontend/src/hooks/: use-generation-stream.ts
frontend/src/lib/: api.ts  types.ts
